<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuChangeNameActivity">

    <ImageView
        android:id="@+id/templateFormImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="-20dp"
        android:layout_marginBottom="-20dp"
        android:contentDescription="imageView3"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_page" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="imageView3"
        android:visibility="invisible"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat" />

    <TextView
        android:id="@+id/templateFormTextView"
        style="@style/text_message"
        android:layout_width="413dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/templateFormTextView"
        app:layout_constraintBottom_toTopOf="@+id/templateFormFirstSelectChoiceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/templateFormImageView"
        app:layout_constraintVertical_bias="0.934" />

    <Button
        android:id="@+id/templateFormFirstSelectChoiceButton"
        style="@style/start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:text="@string/templateFormThirdSelectChoiceButton_1"
        android:visibility="visible"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/templateFormSecondSelectChoiceButton"
        style="@style/start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:text="@string/templateFormThirdSelectChoiceButton_2"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/templateFormThirdSelectChoiceButton"
        style="@style/start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/templateFormThirdSelectChoiceButton_3"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>