<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuChangeNameActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Print_your_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_page" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat" />

    <TextView
        android:id="@+id/templateFormTextView"
        style="@style/text_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="16sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/Hello"
        android:textAlignment="inherit"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/printYourName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <Button
        android:id="@+id/confirmButton"
        style="@style/start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/confirm_button"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/printYourName"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginBottom="328dp"
        android:autofillHints="Hello"
        android:background="@color/material_dynamic_neutral90"
        android:fontFamily="@font/roboto_light_italic"
        android:hint="@string/Print_your_name"
        android:inputType="text"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>